@@ -52,7 +52,6 @@ typedef struct
   gboolean pres_status;
   gboolean disc_status;
   gboolean rigmask_status;
-  gint guess_direction;
   gint last_used_width;
   gint last_used_height;
   gint32 last_layer_ID;
